Added article, added bibliography

--- a/HaskellArticles.tex
+++ b/HaskellArticles.tex
@@ -322,6 +322,8 @@ bibtotoc,						% Literaturverzeichnis im Inhalt
 
 \large Matt Parsons
 
+\large David Luposchainsky
+
 \large Alexis King
 
 \large Japer Van der Jeugt
@@ -370,7 +372,7 @@ bibtotoc,						% Literaturverzeichnis im Inhalt
 
 %% Erzeugung von Verzeichnissen %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 {\sffamily
-\noindent This document is a compilation of web articles about Haskell, which was put together by William Yaoh. I was interested to have this in one document and not spread via different web pages, so I compiled them together in this document. 
+\noindent This document is a compilation of web articles about Haskell, which was put together by William Yao. I was interested to have this in one document and not spread via different web pages, so I compiled them together in this document. 
 
 \vfill
 
@@ -390,7 +392,7 @@ The homepage for this document is:
 
 %% Der Text %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{Introduction by William Yaoh}
+\chapter{Introduction by William Yao}
 
 For a language that's beloved for its ability to guide the structure of programs into being easier to understand, easier to maintain, and easier to get correct, there's not a lot of resources on how to best use the tools that Haskell provides. Lots of terms and buzzwords, not a lot of in-depth practical guidance on best practices. So I've put together a list of community blog posts and articles on the theme of \emph{building more correct programs}.
 
@@ -423,6 +425,10 @@ Posts in each section are roughly ordered by difficulty.
 \input{matt_parsons2.tex}
 
 
+\input{sandy_maguire.tex}
+
+
+
 
 
 \part{Posts on testing}
@@ -434,7 +440,7 @@ Posts in each section are roughly ordered by difficulty.
 %% Bibliographie unter Verwendung von dinnat %%%%%%%%%%%%%%%%%%%%%%%%%%
 %\setbibpreamble{Präambel}		% Text vor dem Verzeichnis
 \bibliographystyle{plain}
-\bibliography{bibliographie}	% Sie benötigen einen *.bib-Datei
+\bibliography{HaskellArticles}	% Sie benötigen einen *.bib-Datei
 
 
 
