--- a/jasper_van_der_jeugt.tex
+++ b/jasper_van_der_jeugt.tex
@@ -1,9 +1,12 @@
 \chapter{On Ad-hoc Datatypes - Jasper Van der Jeugt}
 
 \begin{quotation}
-\noindent\textit{\textbf{William Yaoh:}}
+\noindent\textit{\textbf{William Yao:}}
 
 \textit{In a similar vein to preventing algebraic blindness, make your code more readable by naming things with datatypes, even ones that only live in a single module. Defining new dataypes is cheap and easy, so do it!}
+
+\vspace{\baselineskip}
+\noindent\textit{Original article: \cite{on_adhoc_datatypes}}
 \end{quotation}
 In Haskell, it is extremely easy for the programmer to add a quick datatype. It does not have to take more than a few lines. This is useful to add auxiliary, ad-hoc datatypes.
 
