--- a/michael_snoyman.tex
+++ b/michael_snoyman.tex
@@ -1,9 +1,12 @@
 \chapter{Weakly Typed Haskell - Michael Snoyman}
 
 \begin{quotation}
-\noindent\textit{\textbf{William Yaoh:}}
+\noindent\textit{\textbf{William Yao:}}
 
 \textit{A short example of preventing errors by restricting our function inputs. Uses the streaming library conduit for its example, but should be understandable without knowing too much about it.}
+
+\vspace{\baselineskip}
+\noindent\textit{Original article: \cite{weakly_typed_haskell}}
 \end{quotation}
 
 
