--- a/matt_parsons.tex
+++ b/matt_parsons.tex
@@ -2,7 +2,7 @@
 \label{sec:type_safety_back_and_forth}
 
 \begin{quotation}
-\noindent\textit{\textbf{William Yaoh:}}
+\noindent\textit{\textbf{William Yao:}}
 
 \textit{Essential reading. A very typical design technique of restricting what inputs your functions take to ensure that they can't fail.}
 
@@ -14,6 +14,7 @@ data NonEmptyVec a = NonEmptyVec a (Vector a)
 -- 'not all whitespace'
 data NonEmptyText = NonEmptyText Char Text
 \end{minted}
+\textit{Original Article: \cite{type_safety_back_and_forth}}
 \end{quotation}
 
 
@@ -188,8 +189,11 @@ By restricting our past, we gain freedom in the future.
 \chapter{Keep your types small\ldots and your bugs smaller - Matt Parsons}
 \label{sec:keep_your_types_small}
 
+\textit{Original article: \cite{keep_your_types_small}}
 
-In my previous article ``Type Safety Back and Forth'' (\ref{sec:type_safety_back_and_forth}), I discussed two different techniques for bringing type safety to programs that may fail. On the one hand, you can push the responsibility forward. This technique uses types like \texttt{Either} and \texttt{Maybe} to report a problem with the inputs to the function. Here are two example type signatures:
+\vspace{\baselineskip}
+
+\noindent In my previous article ``Type Safety Back and Forth'' (\ref{sec:type_safety_back_and_forth}), I discussed two different techniques for bringing type safety to programs that may fail. On the one hand, you can push the responsibility forward. This technique uses types like \texttt{Either} and \texttt{Maybe} to report a problem with the inputs to the function. Here are two example type signatures:
 
 \begin{minted}{haskell}
 safeDivide
