--- a/HaskellArticles.tex
+++ b/HaskellArticles.tex
@@ -350,7 +350,7 @@ bibtotoc,						% Literaturverzeichnis im Inhalt
 
 \tiny \copyright{} by above mentioned authors, compilation by M. Oswald. You may freely copy and distribute this document.
 
-%\texttt{\input{git_hash.tex}}
+\texttt{\input{git_hash.tex}}
 
 \end{titlepage}
 
