started new article from Scott

--- a/HaskellArticles.bib
+++ b/HaskellArticles.bib
@@ -81,3 +81,8 @@
 	howpublished = {Oskar Wickström: Property-Based Testing in a Screencast Editor, Case Study 3: Integration Testing -- \url{https://wickstrom.tech/programming/2019/06/02/property-based-testing-in-a-screencast-editor-case-study-3.html}},
 	note = {Accessed: 27.11.2019}
 
+
+	
+@misc{choosing_properties,
+	howpublished = {Scott Wlaschin: Choosing properties for property-based testing -- \url{https://fsharpforfunandprofit.com/posts/property-based-testing-2/}},
+	note = {Accessed: 27.11.2019}
